deployment.yaml
---


---

---

---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-chiptuning
  annotations:
    image.openshift.io/triggers: |-
      [{"from":{"kind":"ImageStreamTag","name":"fe-chiptuning:latest","namespace":"chiptuning"},"fieldPath":"spec.template.spec.containers[?(@.name==\"fe-chiptuning\")].image","pause":"false"}]
  namespace: chiptuning
spec:
  selector:
    matchLabels:
      app: fe-chiptuning
      tier: frontend
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: fe-chiptuning
        tier: frontend
        name: fe-chiptuning
        version: v1
    spec:
      containers:
        - name: fe-chiptuning
          image: 'image-registry.openshift-image-registry.svc:5000/chiptuning/fe-chiptuning:latest'
          ports:
            - containerPort: 8052
          imagePullPolicy: Always
---
---
apiVersion: v1
kind: Service
metadata:
  name: fe-chiptuning
  namespace: chiptuning
  labels:
    app: fe-chiptuning
    tier: frontend
    version: v1
spec:
  selector:
    app: fe-chiptuning
    tier: frontend
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8052
---

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: it22route
  namespace: chiptuning
  labels:
    app: fe-chiptuning
    tier: frontend
    version: v1
spec:
  host: it22.nl
  to:
    kind: Service
    name: fe-chiptuning
  port:
    targetPort: 8052
  tls:
    termination: edge
    certificate: 
    key: 
    insecureEdgeTerminationPolicy: Redirect
---


---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fe-chiptuning
  namespace: chiptuning
  labels:
    app: fe-chiptuning
    tier: frontend
    version: v1
spec:
  to:
    kind: Service
    name: fe-chiptuning
  port:
    targetPort: 8052
  tls:
    termination: edge
    certificate: 
    key:
    insecureEdgeTerminationPolicy: Redirect
---
